Samples/Ingress_Services/ingress-hosts.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts

spec:
  rules:
  - host: app.domain.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app
            port:
              number: 80

  - host: k8s.domain.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k8s
            port:
              number: 80

  - host: nginx.domain.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80

  - host: tomcat.domain.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tomcat
            port:
              number: 8080
